add inquiry form

--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -114,6 +114,7 @@
           <a href="#" class="brown">Contact</a><br>
           <a href="#" class="brown">Terms Of Services</a><br>
           <a href="#" class="brown">Privacy Policy</a><br>
+          <a href="#" class="brown open-form">Inquiry Form</a><br>
         </div>
         <div class="col-md-2 borderfooter text-center fhcolumn">
           <h4>FOLLOW US</h4><Br>
