penambahan fungsi privacy policy, inquiry, Tos dan FAQ

--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -111,10 +111,10 @@
           </ul>
         </div>
         <div class="col-md-3 borderfooter thcolumn">
-          <a href="#" class="brown">Contact</a><br>
-          <a href="#" class="brown">Terms Of Services</a><br>
-          <a href="#" class="brown">Privacy Policy</a><br>
-          <a href="#" class="brown open-form">Inquiry Form</a><br>
+          <a href="{% url 'Tos' %}" class="brown">Terms Of Services</a><br>
+          <a href="{% url 'Privacy-policy' %}" class="brown">Privacy Policy</a><br>
+          <a href="{% url 'faq' %}" class="brown">FAQ</a><br>
+          <a href="{% url 'inquiry' %}" class="brown open-form">Inquiry Form</a><br>
         </div>
         <div class="col-md-2 borderfooter text-center fhcolumn">
           <h4>FOLLOW US</h4><Br>
